<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatsYourDuing</string>
    <string name="action_settings">Settings</string>
    <string name="login_error">Usuario o Contraseña incorrectos.</string>
    <string name="log_in">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="username_error">Por favor, ingresa tu Usuario.</string>
    <string name="password_error">Por favor, ingresa tu Contraseña.</string>
    <string name="username">Usuario</string>
    <string name="login_success">Ingresando...</string>
    <string name="register">Registrarme en Duing</string>
    <string name="email">Correo electrónico</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="register_error3">Estás ingresando datos incoherentes</string>
    <string name="hello_world">Hello world!</string>
    <string name="register_success">Registrando...</string>
    <string name="register_error1">Debes completar todos los campos</string>
    <string name="register_error2">El nombre de Usuario ya existe</string>
    <string name="processing">Procesando...</string>
    
    
    
    
    
    
    
    
    
    
    
    
    

</resources>
